--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbCliente_Factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbCliente_Factura.cshtml
@@ -5,7 +5,7 @@
         settings.Name = "IdCliente";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Pixel(1200);
-        settings.Properties.DropDownStyle = DropDownStyle.DropDownList;
+        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
         settings.CallbackRouteValues = new { Controller = "Factura", Action = "CmbCliente_Factura", Area = "Facturacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
