--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Modificar_x_Empleado.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Modificar_x_Empleado.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.RRHH.ro_rdep_Info
+﻿@model Core.Erp.Info.RRHH.ro_rdep_det_Info
 @{
     ViewBag.Title = "Modificar RDEP";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -8,7 +8,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Modificar", "Rdep", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Modificar_x_Empleado", "Rdep", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     if (ViewBag.mensaje != null)
     {
@@ -19,7 +19,8 @@
         </div>
     }
     @Html.HiddenFor(q => q.IdEmpresa);
-    @Html.HiddenFor(q => q.IdEmpleado);
+    @Html.HiddenFor(q => q.Id_Rdep);
+    @Html.HiddenFor(q => q.Secuencia);
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -27,31 +28,6 @@
                     <label for="IdEmpleado">Empleado</label>
                     @Html.TextBoxFor(q => q.Empleado, new { @class = "form-control", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.Empleado, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for="IdSucursal">Sucursal</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_Sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @id = "IdSucursal", @readonly = "readonly" })
-                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for="IdAnio">Año fiscal</label>
-                    @Html.DropDownListFor(q => q.pe_anio, new SelectList(ViewBag.lst_Anio, "IdanioFiscal", "IdanioFiscal"), new { @class = "form-control", @id = "pe_anio", @readonly = "readonly" })
-                    @Html.ValidationMessageFor(q => q.pe_anio, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for="IdNomina">Tipo de Nómina</label>
-                    @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina_tipo, "IdNomina_Tipo", "Descripcion"), new { @class = "form-control", @id = "IdNomina_Tipo", @readonly = "readonly" })
-                    @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
