--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
@@ -53,7 +53,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-3">
+            <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal</label>
                     @*@Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control" })*@
@@ -103,6 +103,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
 
 
