--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
@@ -42,6 +42,7 @@
 </script>
 @using (Html.BeginForm("Nuevo", "ATS", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IntArray, new {@id= "IntArray" })
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -56,8 +57,6 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal</label>
-                    @*@Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control" })*@
-
                     @Html.DevExpress().DropDownEditFor(q => q.IntArray, settings =>
                        {
                            settings.Name = "checkComboBox";
@@ -224,8 +223,10 @@
     function dolowadATS() {
         if (IdPeriodo.GetValue() > 0) {
             var datos = {
+                IntArray: IntArray.GetValue(),
                 IdPeriodo: IdPeriodo.GetValue(),
                 IdSucursal: $("#IdSucursal").val()
+                
 
             }
             $.ajax({
