jorgeeeeeeeeeeetieneunsecretoquenadieseenteeeeeeeeeeeeeeeeeeereeeeeeeeeeeeeeeeeeeeeeeeeasudedolefaltaunauñaaaaaaaaaaaaaaaaaaaaaaaaaayfeolotieeeeeeeeeeeeeeeneeeeeeeeeeee JIJJIJIJI jooooooooooooooooooorgeVenAtrabjar WORWORWORWOR

--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Modificar.cshtml
@@ -94,12 +94,13 @@
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-6">
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id= "IdSucursal", @disabled = "disabled" })
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -110,30 +111,36 @@
                     @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-11">
                 <div class="form-group">
                     <label for="IdCliente">Cliente*</label>
                     @Html.Partial("_CmbCliente_Proforma", Model.IdCliente)
                     @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-1">
+                <div class="form-group">
+                    <label for="IdCliente"></label>
+                    <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","Cliente",new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa },null)" target="_blank">+</a>
+                </div>
+            </div>
+            <div class="col-md-12">
                 <div class="form-group">
                     <label for="pf_atencion_a">Atención a</label>
                     @Html.TextBoxFor(q => q.pf_atencion_a, new { @class = "form-control", @id = "pf_atencion_a" })
                     @Html.ValidationMessageFor(q => q.pf_atencion_a, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdVendedor">Vendedor*</label>
-                    @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control", @id = "IdVendedor" })
-                    @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
-                </div>
-            </div>
         </div>
 
         <div class="col-md-6">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdCatalogo_FormaPago">Forma de pago*</label>
+                    @Html.DropDownListFor(q => q.IdCatalogo_FormaPago, new SelectList(ViewBag.lst_formapago, "IdCatalogo", "Nombre"), new { @class = "form-control", @id = "IdCatalogo_FormaPago" })
+                    @Html.ValidationMessageFor(q => q.IdCatalogo_FormaPago, "", new { @class = "text-danger" })
+                </div>
+            </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdNivel">Nivel Descuento*</label>
@@ -146,6 +153,14 @@
                     <label for="IdTerminoPago">Termino pago*</label>
                     @Html.DropDownListFor(q => q.IdTerminoPago, new SelectList(ViewBag.lst_pago, "IdTerminoPago", "nom_TerminoPago"), new { @class = "form-control", @id = "IdTerminoPago" })
                     @Html.ValidationMessageFor(q => q.IdTerminoPago, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdVendedor">Vendedor*</label>
+                    @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control", @id = "IdVendedor" })
+                    @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-4">
@@ -179,6 +194,11 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="pf_observacion">Observación</label>
@@ -187,8 +207,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col-md-12">
+    </div>  
+      <div class="col-md-12">
         <button type="button" class="btn btn-primary" id="btn_desbloquear" onclick="MostrarModalDesbloqueo();">
             <i class="fa fa-lock"></i> Desbloquear
         </button>
@@ -215,6 +235,8 @@
 }
 <script>
     $(function () {
+
+        cargar_bodega();
         //Date picker
         $('#pf_fecha').datepicker({
             autoclose: true
@@ -232,8 +254,68 @@
             cargar_fecha_vencimiento();
         });
 
+        $("#IdSucursal").change(function () {
+            Set_NivelDescuento_x_FormaPago();
+            cargar_bodega();
+        });
+        $("#IdCatalogo_FormaPago").change(function () {
+            Set_NivelDescuento_x_FormaPago();
+        });
     });
 
+    function Set_NivelDescuento_x_FormaPago() {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val(),
+            IdCatalogo_FormaPago: $("#IdCatalogo_FormaPago").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("Get_NivelDescuento_x_FormaPago", "Proforma",new { Area = "Facturacion"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                if (data > 0) {
+                    $('#IdNivel').val(data);
+                }
+            },
+            error: function (error) {
+            }
+        });
+    }
+    function cargar_bodega() {
+        $("#IdBodega").empty();
+
+        var sucursal = $("#IdSucursal").val();
+
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: sucursal
+        }
+
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_bodega", "Proforma", new { Area = "Facturacion" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    };
     function MostrarModal() {
         GridView_LoteProforma.PerformCallback();
         $("#OpModal").modal("show");
