--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
@@ -107,7 +107,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id="IdSucursal" })
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -131,23 +131,23 @@
                     <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","Cliente",new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa },null)" target="_blank">+</a>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="form-group">
                     <label for="pf_atencion_a">Atención a</label>
                     @Html.TextBoxFor(q => q.pf_atencion_a, new { @class = "form-control", @id = "pf_atencion_a" })
                     @Html.ValidationMessageFor(q => q.pf_atencion_a, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdVendedor">Vendedor*</label>
-                    @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control", @id = "IdVendedor" })
-                    @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
-                </div>
-            </div>
         </div>
 
         <div class="col-md-6">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdCatalogo_FormaPago">Forma de pago*</label>
+                    @Html.DropDownListFor(q => q.IdCatalogo_FormaPago, new SelectList(ViewBag.lst_formapago, "IdCatalogo", "Nombre"), new { @class = "form-control", @id = "IdCatalogo_FormaPago" })
+                    @Html.ValidationMessageFor(q => q.IdCatalogo_FormaPago, "", new { @class = "text-danger" })
+                </div>
+            </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdNivel">Nivel Descuento*</label>
@@ -160,6 +160,14 @@
                     <label for="IdTerminoPago">Termino pago*</label>
                     @Html.DropDownListFor(q => q.IdTerminoPago, new SelectList(ViewBag.lst_pago, "IdTerminoPago", "nom_TerminoPago"), new { @class = "form-control", @id = "IdTerminoPago" })
                     @Html.ValidationMessageFor(q => q.IdTerminoPago, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdVendedor">Vendedor*</label>
+                    @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control", @id = "IdVendedor" })
+                    @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-4">
@@ -193,6 +201,11 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="pf_observacion">Observación</label>
@@ -202,36 +215,37 @@
             </div>
         </div>
     </div>
-
-    <div class="col-md-12">
-        <button type="button" class="btn btn-primary" id="btn_desbloquear" onclick="MostrarModalDesbloqueo();">
-            <i class="fa fa-lock"></i> Desbloquear
-        </button>
-        <label id="EstadoDesbloqueo" class="text-danger" style="margin-left:10px;" hidden></label>
-    </div>
-    <br />
-    <br />
-    <div class="row">
-        <div class="col-md-12">
             <div class="col-md-12">
-                @Html.Action("GridViewPartial_proforma_det")
+                <button type="button" class="btn btn-primary" id="btn_desbloquear" onclick="MostrarModalDesbloqueo();">
+                    <i class="fa fa-lock"></i> Desbloquear
+                </button>
+                <label id="EstadoDesbloqueo" class="text-danger" style="margin-left:10px;" hidden></label>
             </div>
-        </div>
-    </div>
+            <br />
+            <br />
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-12">
+                        @Html.Action("GridViewPartial_proforma_det")
+                    </div>
+                </div>
+            </div>
 
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Proforma",new { Area = "Facturacion" },null)">Cancelar</a>
-    </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+            <div class="box-footer">
+                <button type="submit" class="btn btn-primary">Guardar</button>
+                <a class="btn btn-default" href="@Url.Action("Index","Proforma",new { Area = "Facturacion" },null)">Cancelar</a>
+            </div>
+            @section Scripts {
+                @Scripts.Render("~/bundles/jqueryval")
+            }
 }
 <script>
     $(function () {
         get_info_termino_pago();
         get_info_cliente();
         cargar_bodega();
+        Set_NivelDescuento_x_FormaPago();
+
 
         //Date picker
         $('#pf_fecha').datepicker({
@@ -250,11 +264,39 @@
             cargar_fecha_vencimiento();
         });
         $("#IdSucursal").change(function () {
+            Set_NivelDescuento_x_FormaPago();
             cargar_bodega();
         });
-
+        $("#IdCatalogo_FormaPago").change(function () {
+            Set_NivelDescuento_x_FormaPago();
+        });
     });
 
+    function Set_NivelDescuento_x_FormaPago() {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val(),
+            IdCatalogo_FormaPago: $("#IdCatalogo_FormaPago").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("Get_NivelDescuento_x_FormaPago", "Proforma",new { Area = "Facturacion"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                if (data > 0) {
+                    $('#IdNivel').val(data);
+                }
+            },
+            error: function (error) {
+            }
+        });
+    }
     function cargar_bodega() {
         $("#IdBodega").empty();
 
@@ -362,7 +404,7 @@
         $('#pf_fecha_vcto').datepicker("update", moment(f, "DD-MM-YYYY").add(vida, 'days').format("DD/MM/YYYY"));
     }
 
-        function get_info_termino_pago() {
+    function get_info_termino_pago() {
         var datos = {
             IdTerminoPago: $("#IdTerminoPago").val()
         }
@@ -382,29 +424,29 @@
             }
         });
     }
-        function get_info_cliente() {
-            var tipo = IdCliente.GetValue();
+    function get_info_cliente() {
+        var tipo = IdCliente.GetValue();
 
-            var datos = {
-                IdCliente: tipo,
-                IdSucursal: $("#IdSucursal").val()
-            }
-            $.ajax({
-                type: 'POST',
-                data: JSON.stringify(datos),
-                url: '@Url.Action("get_info_cliente", "Proforma",new { Area = "Facturacion"})',
-                async: false,
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    $("#pf_atencion_a").val(data.info_persona.pe_nombreCompleto);
-                    $("#IdVendedor").val(data.IdVendedor);
-                },
-                error: function (error) {
-                    alert(error);
-                }
-            });
+        var datos = {
+            IdCliente: tipo,
+            IdSucursal: $("#IdSucursal").val()
         }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("get_info_cliente", "Proforma",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#pf_atencion_a").val(data.info_persona.pe_nombreCompleto);
+                $("#IdVendedor").val(data.IdVendedor);
+            },
+            error: function (error) {
+                alert(error);
+            }
+        });
+    }
 
     function MostrarModalDesbloqueo() {
         $("#ContraseniaAdministrador").val("");
@@ -496,7 +538,7 @@
         $("#ModalPrecios").modal("hide");
     }
 
-     function BuscarProducto(Secuencia) {
+    function BuscarProducto(Secuencia) {
         $("#Secuencia").text(Secuencia);
         var datos = {
             IdSucursal: $("#IdSucursal").val(),
