--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Modificar_x_Empleado.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Modificar_x_Empleado.cshtml
@@ -61,46 +61,21 @@
         <div class="col-md-12">
             <div class="col-md-4">
                 <div class="form-group">
-                    <label for="Valor">Ingresos por otros empleadores</label>
+                    <label for="Valor">Ingresos con otros empleadores</label>
                     @Html.TextBoxFor(q => q.IngresoPorOtrosEmpleaodres, new { @class = "form-control", @id = "IngresoPorOtrosEmpleaodres" })
                     @Html.ValidationMessageFor(q => q.IngresoPorOtrosEmpleaodres, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
-                    <label for="Valor">Decimo tercer sueldo</label>
+                    <label for="Valor">Décimo tercer sueldo</label>
                     @Html.TextBoxFor(q => q.DecimoTercerSueldo, new { @class = "form-control", @id = "DecimoTercerSueldo" })
                     @Html.ValidationMessageFor(q => q.DecimoTercerSueldo, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
-                    <label for="Valor">Decimo Cuarto sueldo</label>
-                    @Html.TextBoxFor(q => q.DecimoCuartoSueldo, new { @class = "form-control", @id = "DecimoCuartoSueldo" })
-                    @Html.ValidationMessageFor(q => q.DecimoCuartoSueldo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for="Valor">Ingresos por otros empleadores</label>
-                    @Html.TextBoxFor(q => q.IngresoPorOtrosEmpleaodres, new { @class = "form-control", @id = "IngresoPorOtrosEmpleaodres" })
-                    @Html.ValidationMessageFor(q => q.IngresoPorOtrosEmpleaodres, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for="Valor">Decimo tercer sueldo</label>
-                    @Html.TextBoxFor(q => q.DecimoTercerSueldo, new { @class = "form-control", @id = "DecimoTercerSueldo" })
-                    @Html.ValidationMessageFor(q => q.DecimoTercerSueldo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for="Valor">Decimo Cuarto sueldo</label>
+                    <label for="Valor">Décimo Cuarto sueldo</label>
                     @Html.TextBoxFor(q => q.DecimoCuartoSueldo, new { @class = "form-control", @id = "DecimoCuartoSueldo" })
                     @Html.ValidationMessageFor(q => q.DecimoCuartoSueldo, "", new { @class = "text-danger" })
                 </div>
