--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/_GridViewPartial_rdep.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/_GridViewPartial_rdep.cshtml
@@ -70,10 +70,11 @@
             c.Width = Unit.Pixel(150);
         });
 
+        settings.Columns.Add("Id_Rdep", "ID").Width = Unit.Percentage(5);
         settings.Columns.Add("pe_anio", "Año").Width = Unit.Percentage(10);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(20);
         settings.Columns.Add("Descripcion", "Tipo de nómina").Width = Unit.Percentage(20);
-        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(40);
+        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(35);
 
     });
 }
