--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/_GridViewPartial_rdep_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/_GridViewPartial_rdep_det.cshtml
@@ -66,14 +66,118 @@
 
         settings.Columns.Add("pe_cedulaRuc", "Cedula").Width = Unit.Percentage(10);
         settings.Columns.Add("Empleado", "Empleado").Width = Unit.Percentage(22);
-        settings.Columns.Add("Sueldo", "Sueldo").Width = Unit.Percentage(8);
-        settings.Columns.Add("IngresoVarios", "Otros ing.").Width = Unit.Percentage(8);
-        settings.Columns.Add("DecimoTercerSueldo", "DIII").Width = Unit.Percentage(8);
-        settings.Columns.Add("DecimoCuartoSueldo", "DIV").Width = Unit.Percentage(8);
-        settings.Columns.Add("Vacaciones", "Vacaciones").Width = Unit.Percentage(8);
-        settings.Columns.Add("AportePErsonal", "IESS").Width = Unit.Percentage(8);
-        settings.Columns.Add("BaseImponibleGravada", "Base Imponible").Width = Unit.Percentage(8);
-        settings.Columns.Add("IngresosGravadorPorEsteEmpleador", "Ingresos Gravados").Width = Unit.Percentage(8);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Sueldo";
+            column.Caption = "Sueldo";
+            column.Width = Unit.Percentage(8);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
+
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IngresoVarios";
+            column.Caption = "Otros ing.";
+            column.Width = Unit.Percentage(8);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
+
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "DecimoTercerSueldo";
+            column.Caption = "DIII";
+            column.Width = Unit.Percentage(8);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
+
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "DecimoCuartoSueldo";
+            column.Caption = "DIV";
+            column.Width = Unit.Percentage(8);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
+
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Vacaciones";
+            column.Caption = "Vacaciones";
+            column.Width = Unit.Percentage(8);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
+
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "AportePErsonal";
+            column.Caption = "IESS";
+            column.Width = Unit.Percentage(8);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
+
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "BaseImponibleGravada";
+            column.Caption = "Base Imponible";
+            column.Width = Unit.Percentage(8);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
+
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IngresosGravadorPorEsteEmpleador";
+            column.Caption = "Ingresos Gravados";
+            column.Width = Unit.Percentage(8);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
+
+            });
+        });
 
         settings.ClientSideEvents.BeginCallback = "function(s,e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();}";
     });
