--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
@@ -222,7 +222,7 @@
     function dolowadATS() {
         if (IdPeriodo.GetValue() > 0) {
             var datos = {
-                IntArray: IntArray.GetValue(),
+                IntArray: checkComboBox.GetValue(),
                 IdPeriodo: IdPeriodo.GetValue(),
                 IdSucursal: $("#IdSucursal").val()
                 
