--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Web.UI.WebControls
 @model Core.Erp.Info.Contabilidad.ATS.ATS_Info.ats_Info
 @{
-    ViewBag.Title = "Anexo trasnsaccional simplificado";
+    ViewBag.Title = "Anexo transaccional simplificado";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -107,7 +107,7 @@
             <div class="col-md-10">
                 <div class="form-group">
                     <label for="info_periodo.IdanioFiscal">Periodo*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.info_periodo.IdPeriodo, settings =>
+                    @Html.DevExpress().ComboBoxFor(q => q.IdPeriodo, settings =>
                {
                    settings.Name = "IdPeriodo";
                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
@@ -117,11 +117,10 @@
                    ////Campo ID
                    settings.Properties.ValueField = "IdPeriodo";
                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "function (s,e) {get_ats();}";
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;                   
 
                    }).BindList(ViewBag.lst_periodos).GetHtml()
-                    @Html.ValidationMessageFor(q => q.info_periodo.IdPeriodo, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-2">
@@ -136,131 +135,9 @@
 
         </div>
     </div>
-    <div id="Tabs" role="tabpanel">
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs" role="tablist">
-            <li class="active">
-                <a href="#tb_ventas" aria-controls="informacion" role="tab" data-toggle="tab">Ventas</a>
-            </li>
-            <li>
-                <a href="#tb_compras" aria-controls="AdministracionPreBajas" role="tab" data-toggle="tab">Compras</a>
-            </li>
-            <li>
-                <a href="#tb_importaciones" aria-controls="AdministracionPreBajas" role="tab" data-toggle="tab">Exportaciones</a>
-            </li>
-            <li>
-                <a href="#tb_retenciones" aria-controls="AdministracionPreBajas" role="tab" data-toggle="tab">Retenciones</a>
-            </li>
-            <li>
-                <a href="#tb_comprobantes_anulados" aria-controls="AdministracionPreBajas" role="tab" data-toggle="tab">Comprobantes anulados</a>
-            </li>
-        </ul>
-        <!-- Tab panes -->
-        <div class="tab-content" style="padding-top: 20px">
-
-            <div role="tabpanel" class="tab-pane active" style="margin-left: 2em;" id="tb_ventas">
-
-                @Html.Action("GridViewPartial_ventas")
-
-            </div>
-
-            <div role="tabpanel" class="tab-pane" id="tb_compras">
-                @Html.Action("GridViewPartial_compras")
-
-            </div>
-
-
-            <div role="tabpanel" class="tab-pane" id="tb_importaciones">
-                @Html.Action("GridViewPartial_exportaciones")
-
-
-            </div>
-
-            <div role="tabpanel" class="tab-pane" id="tb_retenciones">
-                @Html.Action("GridViewPartial_retenciones")
-
-            </div>
-            <div role="tabpanel" class="tab-pane" id="tb_comprobantes_anulados">
-                @Html.Action("GridViewPartial_anulados")
-
-
-            </div>
-
-
-        </div>
-    </div>
-
-
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
 
 }
-
-
-<script>
-
-    $("#IdSucursal").change(function () {
-        dolowadATS();
-
-    });
-    
-    function dolowadATS() {        
-        if (IdPeriodo.GetValue() > 0) {
-            console.log(checkComboBox.GetValue());
-            var datos = {
-                IntArray: checkComboBox.GetValue(),
-                IdPeriodo: IdPeriodo.GetValue(),
-                IdSucursal: $("#IdSucursal").val()                
-            }
-            $.ajax({
-                type: 'POST',
-                data: JSON.stringify(datos),
-                url: '@Url.Action("dolowadATS","ATS", new { Area = "Contabilidad" })',
-                async: false,
-                bDeferRender: true,
-                bProcessing: true,
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    window.location = '/Downloads?file=' + data;
-                },
-                error: function (error) {
-                }
-            });
-        }
-    };
-
-    function get_ats() {
-
-
-
-        if (IdPeriodo.GetValue() > 0) {
-            var datos = {
-                IdPeriodo: IdPeriodo.GetValue()
-            }
-            $.ajax({
-                type: 'POST',
-                data: JSON.stringify(datos),
-                url: '@Url.Action("get_ats", "ATS", new { Area = "Contabilidad" })',
-                async: false,
-                bDeferRender: true,
-                bProcessing: true,
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    GridViewPartial_ventas.PerformCallback();
-                    GridViewPartial_compras.PerformCallback();
-                    GridViewPartial_retenciones.PerformCallback();
-                    GridViewPartial_exportaciones.PerformCallback();
-                    GridViewPartial_anulados.PerformCallback();
-
-                },
-                error: function (error) {
-                }
-            });
-        }
-    };
-
-</script>
