--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/_GridViewPartial_pago_beneficios.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/_GridViewPartial_pago_beneficios.cshtml
@@ -140,7 +140,7 @@
             column.SetDataItemTemplateContent(c =>
             {
                 
-                    ViewContext.Writer.Write("<span class=\"glyphicon glyphicon-download-alt\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("GetCSV", "PagoBenediciosSociales", new { Area = "RRHH", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa"), IdNominaTipoLiqui = DataBinder.Eval(c.DataItem, "IdNominaTipoLiqui") }, Request.Url.Scheme) + "');\"></span>");
+                    ViewContext.Writer.Write("<span class=\"glyphicon glyphicon-download-alt\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("GetCSV", "PagoBenediciosSociales", new { Area = "RRHH", IdRol = DataBinder.Eval(c.DataItem, "IdRol"), IdNomina_TipoLiqui = DataBinder.Eval(c.DataItem, "IdNomina_TipoLiqui") }, Request.Url.Scheme) + "');\"></span>");
                 
             });
             column.Width = Unit.Percentage(5);
