--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿﻿@using Core.Erp.Web.Helps
 @model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    ViewBag.Title = "Rdep";
+    ViewBag.Title = "RDEP";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
