--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/_CmbProveedor_CXP.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/_CmbProveedor_CXP.cshtml
@@ -5,7 +5,7 @@
     {
         settings.Name = "IdProveedor";
         settings.Width = Unit.Percentage(100);
-        settings.Properties.DropDownWidth = Unit.Percentage(100);
+        settings.Properties.DropDownWidth = Unit.Pixel(1200);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
         settings.CallbackRouteValues = new { Controller = "SolicitudPago", Action = "CmbProveedor_CXP", Area = "CuentasPorPagar" };
         settings.Properties.CallbackPageSize = 15;
