--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_CmbProducto_TransferenciaInventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_CmbProducto_TransferenciaInventario.cshtml
@@ -10,14 +10,13 @@
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pr_descripcion";
-        settings.Properties.TextFormatString = "[{1}] {2}";
+        settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdProducto";
         settings.Properties.ValueType = typeof(decimal);
-        settings.Properties.FilterMinLength = 3;
-        settings.Properties.Columns.Add("IdProducto", "ID", 5);
-        settings.Properties.Columns.Add("pr_descripcion", "Producto", 65);
-        settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
-        settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
+        //settings.Properties.FilterMinLength = 3;
+        settings.Properties.Columns.Add("IdProducto", "ID", 10);
+        settings.Properties.Columns.Add("pr_descripcion", "Producto", 70);
+        settings.Properties.Columns.Add("nom_categoria", "Categoria", 20);
 
     })
     .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.TransferenciasInventarioController().get_list_bajo_demanda,
